# japanese-word-frequency-list

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
