[package]
name = "process_syosetu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[profile.release]
lto = true
debug = true

[profile.dev]
debug = 2

[profile.dev.build-override]
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mecab = "0.1.5"
rayon = "1.7.0"
serde_json = "1.0.99"
serde = { version="1.0.164", features=["derive"] }
anyhow = "1.0.71"
rustc-hash = "1.1.0"
indicatif = "0.17.5"
regex = "1.8.4"
mimalloc = { version = "*", default-features = false }
